<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.gentics.mesh</groupId>
	<artifactId>mesh</artifactId>
	<version>0.23.1-SNAPSHOT</version>

	<packaging>pom</packaging>
	<name>Mesh</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<projectRoot>${project.basedir}</projectRoot>
		<mesh.admin-ui.version>0.9.1</mesh.admin-ui.version>

		<asm.version>3.3.1</asm.version>
		<spring.security.version>4.2.3.RELEASE</spring.security.version>
		<ferma.version>2.4.0</ferma.version>
		<ferma.orientdb.version>2.3.1</ferma.orientdb.version>
		<elasticsearch.client.version>0.5.0</elasticsearch.client.version>
		<orientdb.version>2.2.34</orientdb.version>
		<dagger.version>2.11</dagger.version>
		<hazelcast.version>3.8.4</hazelcast.version>
		<jackson.version>2.9.0</jackson.version>

		<surefire.forkcount>3</surefire.forkcount>
		<surefire.jvm.postfix></surefire.jvm.postfix>
		<skip.unit.tests>false</skip.unit.tests>
		<skip.cluster.tests>false</skip.cluster.tests>
		<mesh.database.provider>mesh-orientdb</mesh.database.provider>
		<mesh.image.provider>mesh-service-image-imgscalr</mesh.image.provider>
		<mesh.build.timestamp>${maven.build.timestamp}</mesh.build.timestamp>
	</properties>

	<scm>
		<connection>scm:git:git@git.gentics.com:psc/mesh.git</connection>
		<developerConnection>scm:git:git@git.gentics.com:psc/mesh.git</developerConnection>
		<url>https://git.gentics.com/psc/mesh</url>
		<tag>HEAD</tag>
	</scm>

	<parent>
		<groupId>com.gentics.vertx</groupId>
		<artifactId>maven-vertx-parent</artifactId>
		<version>3.5.6</version>
	</parent>

	<developers>
		<developer>
			<name>Johannes Schüth</name>
			<url>https://github.com/Jotschi</url>
			<email>git@jotschi.de</email>
			<organization>Gentics Software</organization>
			<roles>
				<role>Core Developer</role>
			</roles>
		</developer>
		<developer>
			<name>Michael Bromley</name>
			<url>https://github.com/michaelbromley/</url>
			<organization>Gentics Software</organization>
			<roles>
				<role>Core Developer</role>
			</roles>
		</developer>
	</developers>

	<organization>
		<name>Gentics Software</name>
		<url>http://www.gentics.com</url>
	</organization>

	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<inceptionYear>2014</inceptionYear>

	<modules>
		<module>rest-model</module>
		<module>api</module>
		<module>plugin-api</module>
		<module>common</module>
		<module>test-common</module>
		<module>elasticsearch</module>
		<module>rest-client</module>
		<module>changelog-system</module>
		<module>databases</module>
		<module>services</module>
		<module>core</module>
		<module>performance-tests</module>
		<module>verticles</module>
		<module>server</module>
		<module>demo</module>
		<module>distributed</module>
		<module>doc</module>
	</modules>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<profiles>
		<profile>
			<id>inclusions</id>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<skip>${skip.unit.tests}</skip>
							<includesFile>${projectRoot}/inclusions.txt</includesFile>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.syncleus.ferma</groupId>
				<artifactId>ferma</artifactId>
				<version>${ferma.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-slf4j-impl</artifactId>
				<version>${log4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-api</artifactId>
				<version>${log4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-core</artifactId>
				<version>${log4j.version}</version>
			</dependency>

			<dependency>
				<groupId>com.google.dagger</groupId>
				<artifactId>dagger-compiler</artifactId>
				<version>${dagger.version}</version>
				<optional>true</optional>
			</dependency>
			<dependency>
				<groupId>com.google.dagger</groupId>
				<artifactId>dagger</artifactId>
				<version>${dagger.version}</version>
			</dependency>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>20.0-rc1</version>
			</dependency>


			<!-- Spring - bcrypt -->
			<dependency>
				<groupId>org.springframework.security</groupId>
				<artifactId>spring-security-core</artifactId>
				<version>${spring.security.version}</version>
			</dependency>

			<!-- Jackson -->
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>2.9.0</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-core</artifactId>
				<version>2.9.0</version>
			</dependency>

			<!-- Test dependencies -->
			<dependency>
				<groupId>org.assertj</groupId>
				<artifactId>assertj-core</artifactId>
				<version>3.4.1</version>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-all</artifactId>
				<version>1.10.19</version>
			</dependency>
			<dependency>
				<groupId>com.jayway.jsonpath</groupId>
				<artifactId>json-path</artifactId>
				<version>2.2.0</version>
			</dependency>
			<dependency>
				<groupId>org.skyscreamer</groupId>
				<artifactId>jsonassert</artifactId>
				<version>1.3.0</version>
			</dependency>
			<dependency>
				<groupId>org.simpleframework</groupId>
				<artifactId>simple-xml</artifactId>
				<version>2.7.1</version>
			</dependency>
			<dependency>
				<groupId>io.vertx</groupId>
				<artifactId>vertx-unit</artifactId>
				<version>${vertx.version}</version>
			</dependency>
			<dependency>
				<groupId>io.vertx</groupId>
				<artifactId>vertx-rx-java2</artifactId>
				<version>${vertx.version}</version>
			</dependency>
			<dependency>
				<groupId>io.vertx</groupId>
				<artifactId>vertx-dropwizard-metrics</artifactId>
				<version>${vertx.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>


	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<configuration>
						<skip>${skip.unit.tests}</skip>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.0.0-M1</version>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireJavaVersion>
									<version>1.8.0</version>
								</requireJavaVersion>
								<requireReleaseDeps>
									<onlyWhenRelease>true</onlyWhenRelease>
									<message>No Snapshots Allowed!</message>
									<excludes>
										<exclude>org.apache.maven:maven-core</exclude>
										<exclude>org.apache.maven.plugins:*</exclude>
									</excludes>
								</requireReleaseDeps>
							</rules>
							<fail>true</fail>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>2.1</version>
			</plugin>
			<plugin>
				<artifactId>maven-scm-plugin</artifactId>
				<version>1.8.1</version>
				<configuration>
					<tag>${project.artifactId}-${project.version}</tag>
				</configuration>
			</plugin>
			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-gpg-plugin</artifactId> <executions> <execution> <id>sign-artifacts</id> <phase>verify</phase> <goals> 
				<goal>sign</goal> </goals> </execution> </executions> </plugin> -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<configuration>
					<skip>true</skip>
					<skipDeploy>true</skipDeploy>
					<generateReports>false</generateReports>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<verbose>true</verbose>
					<compilerVersion>1.8</compilerVersion>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<skip>${skip.unit.tests}</skip>
					<jvm>${env.JAVA_1_8_HOME}/bin/java</jvm>
					<argLine>-Xmx256m -XX:MaxDirectMemorySize=1524m</argLine>
					<forkedProcessTimeoutInSeconds>2700</forkedProcessTimeoutInSeconds>
					<rerunFailingTestsCount>0</rerunFailingTestsCount>
					<reuseForks>false</reuseForks>
					<forkCount>${surefire.forkcount}</forkCount>
					<trimStackTrace>false</trimStackTrace>
					<useSystemClassLoader>false</useSystemClassLoader>
					<excludes>
						<include>**/*AbstractTest.java</include>
						<include>**/*Abstract*Test.java</include>
						<exclude>**/*Abstract*.java</exclude>
						<exclude>**/Abstract*.java</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>maven.gentics.com</id>
			<name>Gentics Maven Repository</name>
			<url>https://maven.gentics.com/maven2</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>maven.gentics.com</id>
			<name>Gentics Maven Repository</name>
			<url>https://maven.gentics.com/maven2</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

	<distributionManagement>
		<repository>
			<id>lan.releases</id>
			<name>Gentics Releases Repository</name>
			<url>https://repo.gentics.com/artifactory/lan.releases.staging.mesh</url>
		</repository>
		<snapshotRepository>
			<id>lan.snapshots</id>
			<name>Gentics Snapshots Repository</name>
			<url>https://repo.gentics.com/artifactory/lan.snapshots.mesh</url>
		</snapshotRepository>
	</distributionManagement>
</project>
